--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@ui-kitten/components": "^5.1.2",
     "expo": "~46.0.8",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-icomoon": "^2.5.4",
     "react-native": "0.69.4",
+    "react-native-svg": "12.3.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "react-native-svg-transformer": "^1.0.0",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
