--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eva-design/eva": "^2.1.1",
     "@react-navigation/native-stack": "^6.7.0",
     "@ui-kitten/components": "^5.1.2",
+    "@ui-kitten/eva-icons": "^5.1.2",
     "expo": "~46.0.8",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
